--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: loginkit
+name: flutter_appwrite_demo
 description: Login Flow Template
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -12,9 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_svg: ^0.17.4
-  firebase_core: ^0.4.3+1
-  firebase_auth: ^0.15.3
+  flutter_svg: ^0.19.0
   modal_progress_hud: ^0.1.3
   confetti: ^0.4.0
 
