--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_svg: ^0.19.0
   modal_progress_hud: ^0.1.3
   confetti: ^0.4.0
+  appwrite: ^0.2.3
 
 dev_dependencies:
   flutter_test:
